# hyprnote

./: .gitattributes  .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  Taskfile.yaml  package.json  pnpm-lock.yaml
.github/actions/rust_install/: action.yaml
.github/workflows/: desktop_cd.yaml
apps/desktop/: releases.json
apps/desktop/src-tauri/: Cargo.toml  Info.plist  build.rs  tauri.conf.json  tauri.conf.stable.json  tauri.conf.staging.json
apps/pro/src/: mcp.ts
crates/audio/src/: device_monitor.rs  lib.rs  mic.rs  resampler.rs  utils.rs
crates/db-user/src/: chat_conversations_migration.sql  chat_conversations_ops.rs  chat_conversations_types.rs  chat_messages_v2_migration.sql  chat_messages_v2_ops.rs  chat_messages_v2_types.rs  lib.rs  sessions_ops.rs
crates/detect/src/: lib.rs
crates/gbnf/src/: lib.rs
crates/llama/: Cargo.toml
crates/llama/src/: lib.rs  types.rs
crates/llm/: Cargo.toml
crates/llm-interface/: Cargo.toml
crates/llm-interface/src/: lib.rs  manager.rs
crates/llm/src/: error.rs  lib.rs  manager.rs  task.rs
crates/notification-macos/examples/: test_notification.rs
crates/notification-macos/src/: lib.rs
crates/notification/src/: lib.rs
crates/template/assets/: create_title.system.jinja  (+2 more)
crates/vad2/: Cargo.toml
crates/whisper-local/: Cargo.toml
owhisper/owhisper-client/: Cargo.toml
owhisper/owhisper-client/src/: lib.rs
plugins/db/: build.rs
plugins/listener/: Cargo.toml
plugins/local-llm/: Cargo.toml  build.rs
plugins/local-stt/: Cargo.toml
plugins/template/: build.rs
plugins/windows/: Cargo.toml
(+118 files in other folders)
