[package]
name = "llm"
version = "0.1.0"
edition = "2021"

[dependencies]
hypr-gbnf = { workspace = true }
hypr-llama = { workspace = true }
hypr-llm-interface = { workspace = true }
hypr-template = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

futures-util = { workspace = true }
tokio = { workspace = true }
